The Search Alignment and the alignments in the pages are fixed and SearchProducts are added

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5428,7 +5428,7 @@ tbody tr td:last-child {
 .table > thead > tr > td,
 .table > thead > tr > th {
   line-height: 32px;
-  vertical-align: middle;
+  vertical-align: baseline;
 }
 .table > thead > tr > th {
   border-bottom: 1px solid #e7e7e7;
